--- a/StyleSheets/styleTwitch.css
+++ b/StyleSheets/styleTwitch.css
@@ -66,39 +66,37 @@
     border-left: 3px solid transparent;
     border-right: 3px solid transparent;
 }
-.chat-panel .message[data-role~="ExuDev"] .message-author {
+.chat-panel .message[data-role~="BExDev"] .message-author {
     color: #00FFFF;
     background: url('https://i.imgur.com/N4LsfN5.png') no-repeat;
-    padding-left: 24px;
-    padding-bottom: 20px;
+    padding-left: 22px;
+    padding-bottom: 1px;
+    background-position: -1px;
 }
-.chat-panel .message[data-role~="ExuVerified"] .message-author {
+.chat-panel .message[data-role~="BExVerified"] .message-author {
     color: #9800FF;
     background: url('http://i.imgur.com/9pUNa4P.png') no-repeat;
-    padding-left: 24px;
-    padding-bottom: 20px;
+    padding-left: 22px;
+    padding-bottom: 1px;
+    background-position: -1px;
 }
-.chat-panel .message[data-role~="ExuMessage"] {
-    border-right: 3px solid #0003FF;
-    border-left: 3px solid #0003FF;
-    background: -webkit-linear-gradient(left, rgba(0, 52, 255, 0.3) 0%, rgba(0, 32, 255, 0.1) 7%, rgba(0, 42, 255, 0.1) 95%, rgba(0, 78, 247, 0.3) 100%);
-    background: linear-gradient(left, rgba(0, 52, 255, 0.3) 0%, rgba(0, 32, 255, 0.1) 7%, rgba(0, 42, 255, 0.1) 95%, rgba(0, 78, 247, 0.3) 100%);
-    text-align: center;
-}
-.chat-panel .message[data-role~="ExuDonator"] .message-author {
+.chat-panel .message[data-role~="BExDonator"] .message-author {
     color: #FFFFFF;
     text-shadow: 0px 0px 13px rgba(255, 255, 255, 1);
     display: inline;
     position: relative;
 }
-.chat-panel .message[data-role~="ExuBot"] .message-author {
+.chat-panel .message[data-role~="BExBot"] .message-author {
     background: url('https://i.imgur.com/ddVOAAS.png') no-repeat;
-    padding-left: 20px;
+    padding-left: 22px;
+    padding-bottom: 1px;
+    background-position: -1px;
 }
-.chat-panel .message[data-role~="ExuTSSN"] .message-author {
+.chat-panel .message[data-role~="BExTSSN"] .message-author {
     background: url('https://exudev.ca/BeX/tssn.png') no-repeat;
-    padding-left: 20px;
-    padding-bottom: 20px;
+    padding-left: 22px;
+    padding-bottom: 1px;
+    background-position: -1px;
 }
 .chat-panel .message[data-role~="TheBExBot"] .message-body {
     color: #FF0000 !important;
